# sulfide

./: meson.build
src/: ast.hpp  driver.hpp  main.cpp  parser.yy  scanner.ll  util.hpp
src/frontend/: debug.cpp  debug.hpp  main.cpp  parse-driver.hpp  parser.yy  scanner.ll
subprojects/: conflict.wrap
syntax/vim/ftdetect/: sulfide.vim
syntax/vim/syntax/: sulfide.vim
